--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ body * {
 
 header {
   margin-bottom: 63px;
+  text-align: center;
+  background-position-y: -715;
+}
+
+#cards {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
 }
 
 .card {
